--- a/Pipfile
+++ b/Pipfile
@@ -5,10 +5,13 @@ name = "pypi"
 
 [packages]
 pillow = "*"
+flake8 = "*"
 
 [dev-packages]
 pytest = "*"
+pytest-cov = "*"
+flake8 = "*"
 
 [requires]
-python_version = "3.13"
-python_full_version = "3.13.5"
+python_version = "3.10"
+python_full_version = "3.10.0"
