--- a/Pipfile
+++ b/Pipfile
@@ -5,7 +5,6 @@ name = "pypi"
 
 [packages]
 pillow = "*"
-flake8 = "*"
 
 [dev-packages]
 pytest = "*"
@@ -13,5 +12,5 @@ pytest-cov = "*"
 flake8 = "*"
 
 [requires]
-python_version = "3.10.*"
+python_version = "3.10"
 
