--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,33 +25,27 @@ jobs:
       with:
         python-version: "3.10"
         
-    # Install pipenv
-    - name: Install pipenv
+    # Install project dependencies
+    - name: Install dependencies directly with pip
       run: |
         python -m pip install --upgrade pip
-        pip install pipenv
-        
-    # Install project dependencies
-    - name: Install dependencies
-      run: |
-        pipenv install $(which python3) --dev
-        
+        pip install pillow pytest flake8
+           
     # Run basic code quality checks
     - name: Lint code
       run: |
-        pipenv run pip install flake8
-        pipenv run flake8 src --count --show-source --statistics --max-line-length=127
+         flake8 src --count --show-source --statistics --max-line-length=127
       continue-on-error: true  # Don't fail the build for style issues
         
     # Run the test suite
     - name: Run tests
       run: |
-        pipenv run pytest tests/ -v
+         pytest tests/ -v
         
     # Verify the app can start (import test)
     - name: Test app imports
       run: |
-        pipenv run python -c "
+        python -c "
         try:
             from src.exceptions import DrawingError
             from src.tools.pen_tool import PenTool  
@@ -65,7 +59,7 @@ jobs:
     # Test that main module loads (without GUI)
     - name: Test main module
       run: |
-        pipenv run python -c "
+        python -c "
         import sys
         sys.path.append('src')
         try:
